Fixup xml-stylesheet processing instructions. b=136718 r=heikki@netscape.com sr=kin@netscape.com